# SAT

./: CMakeLists.txt
include/: clause.h
test/: assignment_test.cc
